feat: introduce domain in failover annotation to logically group all domain together (#122)
## Summary
<!-- Provide a general summary description of your changes -->

## Details
<!-- Describe your changes in detail and the context -->

## Checklist:
<!--- Go over all the following points, and put an `x` in all the boxes
that apply. -->
<!--- If you're unsure about any of these, don't hesitate to ask. We're
here to help! -->

- [ ] I've added tests for my code.
- [ ] Documentation has been updated accordingly to this PR
- [ ] I have verified all the modules and confirmed no impacts

## Related issue : 
<!-- If it fixes an open issue, please link to the issue here. -->